--- a/templates/product.specialn.liquid
+++ b/templates/product.specialn.liquid
@@ -3,7 +3,7 @@
   The contents of the product.liquid template can be found in /sections/product-template.liquid
 {% endcomment %}
 
-{% section 'product-new' %}
+{% section 'product-new-1' %}
 {% section 'releted_upsell_popup' %}
 {% section 'related-product' %}
 
