Added class for GA events

--- a/snippets/back-in-stock-form.liquid
+++ b/snippets/back-in-stock-form.liquid
@@ -259,7 +259,7 @@ $('#alertbtn').on('click',function(e){
       <div class="slider-outofstock">
             {% for handle in product_handle %}
                 <div class="slider__item">
-                    <a href="{{all_products[handle].variants[3].url}}">
+                    <a href="{{all_products[handle].variants[3].url}}" class="back-in-stock-popup">
                     <img src="{{all_products[handle] | img_url: 'medium'}}" alt="">
                     <div class="slider__item-price">
                         <span class="title-product">{{all_products[handle].title}}</span>
