Innitial uncommited changes

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -17,6 +17,9 @@
   <meta name="cmsmagazine" content="bdcdc6de24aabdfc464a9d2d5d6b34ac" /> 
   <!-- KV 15/02 -->
   <meta name="google-site-verification" content="a4TAWTeb_JqFZ6hfN97VJ_UnJcM5d9ONGZ_qf7-S2JY" />
+  <!-- DV 27/07 -->
+  <meta name="p:domain_verify" content="300f08e5f3316850033f167b79a36ae1"/>
+  
   <link rel="canonical" href="{{ canonical_url }}">
   {% comment %}
   {% endcomment %}
