--- a/assets/theme.js.liquid
+++ b/assets/theme.js.liquid
@@ -2850,7 +2850,11 @@ theme.Product = (function() {
       $(this.selectors.originalPrice).html(
         theme.Currency.formatMoney(variant.price*discount, theme.moneyFormat)
       );
-
+      if ( variant.available ) {
+        $('.product').removeClass('in-stock out-of-stock').addClass('in-stock').text('In stock')
+      } else {
+        $('.product').removeClass('in-stock out-of-stock').addClass('out-of-stock').text('Out of stock')
+      }
       // Update and show the product's compare price if necessary
       if (variant.compare_at_price > variant.price) {
         if (discount < 1) {
